[package]
name = "sct-wasm"
version = "0.1.0"
authors = ["chenyongda"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
serde-wasm-bindgen = "0.1.3"
serde = "^1.0.59"
serde_derive = "^1.0.59"
linked-hash-map = "0.5.2"
serde_json = "1.0"
js-sys = "0.3.32"
libmath = "0.2.1"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

# [profile.release]
# opt-level = 'z'
# lto = true